--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Ekran1"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_ekran1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
